--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Vibemate</title>
 
     <!-- favicon here -->
-    <link rel="icon" href="assets/img/favicon.ico" type="image/png">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 
     <!-- css files link here -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -929,7 +929,7 @@
                         </div>
                     </div>
                     <div class="footer__credit d-flex justify-content-between align-items-center flex-wrap">
-                        <p>© 2023 Vibemate. All rights reserved.</p>
+                        <p>© 2023 <a href="#" style="text-decoration: none;">Vibemate</a>. All rights reserved.</p>
                         <div class="footer__privacy__menu">
                             <a href="#">Privacy Policy</a>
                             <a href="#">Terms of Service</a>
