--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
         <!-- user area start here -->
 
-        <section class="user__area">
+        <section class="user__area" id="testimonial">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
